# panli-crowdtruth

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
data/01_raw/: prolific_workers_all.csv
data/02_intermediate/: config.pickle
data/03_results/: prolific_workers_final.csv
notebooks/: inspect_data.ipynb
src/panli_crowdtruth/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/panli_crowdtruth/pipelines/analysis/: annotations.py  config_plotly.py  pipeline.py  units.py  workers_demographics.py  workers_performance.py  write_images.py
src/panli_crowdtruth/pipelines/compute_crowdtruth_metrics/: compute_metrics.py  pipeline.py  preprocessing.py
src/panli_crowdtruth/pipelines/compute_metrics/: nodes.py  pipeline.py
src/panli_crowdtruth/pipelines/preprocessing/: nodes.py  pipeline.py
src/panli_crowdtruth/pipelines/selection/: nodes.py  pipeline.py
