[tool.poetry]
name = "panli-crowdtruth"
version = "0.1.0"
description = ""
authors = ["Chantal van Son <c.m.van.son@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
kedro = "^0.19.9"
jupyter = "^1.1.1"
kedro-datasets = "^5.0.0"
crowdtruth = "^2.1"
matplotlib = "^3.10.3"
plotly = "^6.1.2"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "panli_crowdtruth"
project_name = "panli_crowdtruth"
kedro_init_version = "0.19.9"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "panli_crowdtruth.__version__"


[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "99b9f2fec2734725a5816834d384f622"
